--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 /* Footer */
 footer {
-    
+
     gap: 2rem;
     padding: 1rem 2rem;
     position: absolute;
@@ -72,7 +72,7 @@ hr {
     object-fit: contain;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 100px) {
     footer {
         flex-direction: row !important;
         justify-content: space-evenly;
